# csharp/src/Hathora.Cloud.Sdk/Model/ProcessStatus.cs
@@ -1,0 +1,71 @@
+/*
+ * Hathora Cloud API
+ *
+ * Welcome to the Hathora Cloud API documentation! Learn how to use the Hathora Cloud APIs to build and scale your game servers globally.
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = Hathora.Cloud.Sdk.Client.OpenAPIDateConverter;
+
+namespace Hathora.Cloud.Sdk.Model
+{
+    /// <summary>
+    /// Defines ProcessStatus
+    /// </summary>
+    [JsonConverter(typeof(StringEnumConverter))]
+    public enum ProcessStatus
+    {
+        /// <summary>
+        /// Enum Starting for value: starting
+        /// </summary>
+        [EnumMember(Value = "starting")]
+        Starting = 1,
+
+        /// <summary>
+        /// Enum Running for value: running
+        /// </summary>
+        [EnumMember(Value = "running")]
+        Running = 2,
+
+        /// <summary>
+        /// Enum Draining for value: draining
+        /// </summary>
+        [EnumMember(Value = "draining")]
+        Draining = 3,
+
+        /// <summary>
+        /// Enum Stopping for value: stopping
+        /// </summary>
+        [EnumMember(Value = "stopping")]
+        Stopping = 4,
+
+        /// <summary>
+        /// Enum Stopped for value: stopped
+        /// </summary>
+        [EnumMember(Value = "stopped")]
+        Stopped = 5,
+
+        /// <summary>
+        /// Enum Failed for value: failed
+        /// </summary>
+        [EnumMember(Value = "failed")]
+        Failed = 6
+
+    }
+
+}
