# typescript/src/apis/ProcessesV1Api.ts
@@ -31,7 +31,7 @@ import {
     RegionToJSON,
 } from '../models';
 
-export interface GetProcessInfoRequest {
+export interface GetProcessInfoDeprecatedRequest {
     appId: string;
     processId: string;
 }
@@ -58,21 +58,23 @@ export interface ProcessesV1ApiInterface {
      * @param {string} appId 
      * @param {string} processId 
      * @param {*} [options] Override http request option.
+     * @deprecated
      * @throws {RequiredError}
      * @memberof ProcessesV1ApiInterface
      */
-    getProcessInfoRaw(requestParameters: GetProcessInfoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Process>>;
+    getProcessInfoDeprecatedRaw(requestParameters: GetProcessInfoDeprecatedRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Process>>;
 
     /**
      * Get details for a [process](https://hathora.dev/docs/concepts/hathora-entities#process).
      */
-    getProcessInfo(appId: string, processId: string, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Process>;
+    getProcessInfoDeprecated(appId: string, processId: string, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Process>;
 
     /**
      * Retrieve 10 most recently started [process](https://hathora.dev/docs/concepts/hathora-entities#process) objects for an [application](https://hathora.dev/docs/concepts/hathora-entities#application). Filter the array by optionally passing in a `region`.
      * @param {string} appId 
      * @param {Region} [region] 
      * @param {*} [options] Override http request option.
+     * @deprecated
      * @throws {RequiredError}
      * @memberof ProcessesV1ApiInterface
      */
@@ -88,6 +90,7 @@ export interface ProcessesV1ApiInterface {
      * @param {string} appId 
      * @param {Region} [region] 
      * @param {*} [options] Override http request option.
+     * @deprecated
      * @throws {RequiredError}
      * @memberof ProcessesV1ApiInterface
      */
@@ -108,13 +111,13 @@ export class ProcessesV1Api extends runtime.BaseAPI implements ProcessesV1ApiInt
     /**
      * Get details for a [process](https://hathora.dev/docs/concepts/hathora-entities#process).
      */
-    async getProcessInfoRaw(requestParameters: GetProcessInfoRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Process>> {
+    async getProcessInfoDeprecatedRaw(requestParameters: GetProcessInfoDeprecatedRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Process>> {
         if (requestParameters.appId === null || requestParameters.appId === undefined) {
-            throw new runtime.RequiredError('appId','Required parameter requestParameters.appId was null or undefined when calling getProcessInfo.');
+            throw new runtime.RequiredError('appId','Required parameter requestParameters.appId was null or undefined when calling getProcessInfoDeprecated.');
         }
 
         if (requestParameters.processId === null || requestParameters.processId === undefined) {
-            throw new runtime.RequiredError('processId','Required parameter requestParameters.processId was null or undefined when calling getProcessInfo.');
+            throw new runtime.RequiredError('processId','Required parameter requestParameters.processId was null or undefined when calling getProcessInfoDeprecated.');
         }
 
         const queryParameters: any = {};
@@ -142,8 +145,8 @@ export class ProcessesV1Api extends runtime.BaseAPI implements ProcessesV1ApiInt
     /**
      * Get details for a [process](https://hathora.dev/docs/concepts/hathora-entities#process).
      */
-    async getProcessInfo(appId: string, processId: string, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Process> {
-        const response = await this.getProcessInfoRaw({ appId: appId, processId: processId }, initOverrides);
+    async getProcessInfoDeprecated(appId: string, processId: string, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Process> {
+        const response = await this.getProcessInfoDeprecatedRaw({ appId: appId, processId: processId }, initOverrides);
         return await response.value();
     }
 
